[package]
name = "sa-placer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8.0"
resvg = "0.36.0"
rustworkx-core = "0.13.2"
tempfile = "3.8.0"
tiny-skia = "0.11.2"
usvg = "0.36.0"
