[package]
name = "sa-placer"
version = "0.1.0"
edition = "2021"

[lib]
name = "sa_placer_lib"
path = "src/lib.rs"

[[bin]]
name = "sa_placer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
itertools = "0.12.1"
rand = "0.8.5"
rayon = "1.8.0"
rustc-hash = "1.1.0"
rustworkx-core = "0.14.1"
tempfile = "3.8.0"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sa_placer_benchmark"
harness = false
